testsuite/tests/rename/should_fail/T14907b.hs
module T14907b where

-- This is effectively trying to redefine the constraint tuples already
-- defined in 'GHC.Classes'.
class ()
class (a,b)
class (a,b,c)
